--- a/src/style/cards/cards.scss
+++ b/src/style/cards/cards.scss
@@ -5,7 +5,7 @@
     align-items: center;
     position: relative;
     z-index: 0;
-    .card1 {
+    .card {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -19,36 +19,6 @@
             -moz-box-shadow:    0px -4px 15px 0px #d38484;
             box-shadow:         0px -4px 15px 0px #d38484;
         }
-        .buttons1 {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: #00000077;
-            border-radius: 0 0 10px 10px;
-            width: 14rem;
-            height: 6rem;
-            button {
-                height: 2rem;
-                width: 13rem;
-                margin: 0.3rem;
-                padding: 0.1rem;
-                border: solid 0.1rem #ffffff;
-                background-color: transparent;
-                color: #ffffff;
-                font-size: 0.8rem;
-                font-weight: 300;
-                border-radius: 10px;
-                cursor: pointer;
-            }
-        }
-    }
-    .card2 {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 1rem 0;
         .image2 {
             height: 19rem;
             width: 14rem;
@@ -57,36 +27,6 @@
             -moz-box-shadow:    0px -4px 15px 0px #d38484;
             box-shadow:         0px -4px 15px 0px #d38484;
         }
-        .buttons2 {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: #00000077;
-            border-radius: 0 0 10px 10px;
-            width: 14rem;
-            height: 6rem;
-            button {
-                height: 2rem;
-                width: 13rem;
-                margin: 0.3rem;
-                padding: 0.1rem;
-                border: solid 0.1rem #ffffff;
-                background-color: transparent;
-                color: #ffffff;
-                font-size: 0.8rem;
-                font-weight: 300;
-                border-radius: 10px;
-                cursor: pointer;
-            }
-        }
-    }
-    .card3 {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 1rem 0;
         .image3 {
             height: 19rem;
             width: 14rem;
@@ -95,36 +35,6 @@
             -moz-box-shadow:    0px -4px 15px 0px #d38484;
             box-shadow:         0px -4px 15px 0px #d38484;
         }
-        .buttons3 {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: #00000077;
-            border-radius: 0 0 10px 10px;
-            width: 14rem;
-            height: 6rem;
-            button {
-                height: 2rem;
-                width: 13rem;
-                margin: 0.3rem;
-                padding: 0.1rem;
-                border: solid 0.1rem #ffffff;
-                background-color: transparent;
-                color: #ffffff;
-                font-size: 0.8rem;
-                font-weight: 300;
-                border-radius: 10px;
-                cursor: pointer;
-            }
-        }
-    }
-    .card4 {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 1rem 0;
         .image4 {
             height: 19rem;
             width: 14rem;
@@ -133,7 +43,7 @@
             -moz-box-shadow:    0px -4px 15px 0px #d38484;
             box-shadow:         0px -4px 15px 0px #d38484;
         }
-        .buttons4 {
+        .buttons {
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -152,84 +62,48 @@
                 color: #ffffff;
                 font-size: 0.8rem;
                 font-weight: 300;
-                border-radius: 10px;
+                border-radius: 5px;
                 cursor: pointer;
+            }
+            button:hover {
+                background-color: #ffffff;
+                color: #000000;
             }
         }
     }
+
 }
 @media (min-width: 481px) and (max-width: 768px) {
-    #cards {
-        .card1 {
-            .image1 {
-                margin-top: 1rem;
-                height: 30rem;
-                width: 22rem;
-            }
-            .buttons1 {
-                width: 22rem;
-                height: 9rem;
-                button {
-                    margin: 0.5rem;
-                    height: 3rem;
-                    width: 21rem;
-                    border-radius: 10px;
-                    font-size: 1.35rem;
-                }
-            }
+    #cards .card {
+        .image1 {
+            margin-top: 1rem;
+            height: 30rem;
+            width: 22rem;
         }
-        .card2 {
-            .image2 {
-                margin-top: 5rem;
-                height: 30rem;
-                width: 22rem;
-            }
-            .buttons2 {
-                width: 22rem;
-                height: 9rem;
-                button {
-                    margin: 0.5rem;
-                    height: 3rem;
-                    width: 21rem;
-                    border-radius: 10px;
-                    font-size: 1.35rem;
-                }
-            }
+        .image2 {
+            margin-top: 5rem;
+            height: 30rem;
+            width: 22rem;
         }
-        .card3 {
-            .image3 {
-                margin-top: 5rem;
-                height: 30rem;
-                width: 22rem;
-            }
-            .buttons3 {
-                width: 22rem;
-                height: 9rem;
-                button {
-                    margin: 0.5rem;
-                    height: 3rem;
-                    width: 21rem;
-                    border-radius: 10px;
-                    font-size: 1.35rem;
-                }
-            }
+        .image3 {
+            margin-top: 5rem;
+            height: 30rem;
+            width: 22rem;
         }
-        .card4 {
-            .image4 {
-                margin-top: 5rem;
-                height: 30rem;
-                width: 22rem;
-            }
-            .buttons4 {
-                width: 22rem;
-                height: 9rem;
-                button {
-                    margin: 0.5rem;
-                    height: 3rem;
-                    width: 21rem;
-                    border-radius: 10px;
-                    font-size: 1.35rem;
-                }
+        .image4 {
+            margin-top: 5rem;
+            height: 30rem;
+            width: 22rem;
+        }
+        .buttons {
+            width: 22rem;
+            height: 9rem;
+            button {
+                margin: 0.5rem;
+                height: 3rem;
+                width: 21rem;
+                border-radius: 5px;
+                font-size: 1.2rem;
             }
         }
     }
@@ -237,85 +111,30 @@
 @media (min-width: 769px) and (max-width: 1024px) {
     #cards {
         display: grid;
-        grid-template-areas: "card1 card2" "card3 card4";
-        .card1 {
-            grid-area: card1;
+        grid-template-columns: 1fr 1fr;
+        .card {
             margin: 0 2rem;
             .image1 {
                 margin: 0;
                 height: 26rem;
                 width: 20rem;
             }
-            .buttons1 {
-                width: 20rem;
-                height: 7rem;
-                button {
-                    height: 2.5rem;
-                    width: 19rem;
-                    margin: 0.3rem;
-                    padding: 0.1rem;
-                    border: solid 0.1rem #ffffff;
-                    background-color: transparent;
-                    color: #ffffff;
-                    font-size: 1.1rem;
-                }
-            }
-        }
-        .card2 {
-            grid-area: card2;
-            margin: 0 2rem;
             .image2 {
                 margin: 0;
                 height: 26rem;
                 width: 20rem;
             }
-            .buttons2 {
-                width: 20rem;
-                height: 7rem;
-                button {
-                    height: 2.5rem;
-                    width: 19rem;
-                    margin: 0.3rem;
-                    padding: 0.1rem;
-                    border: solid 0.1rem #ffffff;
-                    background-color: transparent;
-                    color: #ffffff;
-                    font-size: 1.1rem;
-                }
-            }
-        }
-        .card3 {
-            grid-area: card3;
-            margin: 0 2rem;
             .image3 {
                 margin-top: 3rem;
                 height: 26rem;
                 width: 20rem;
             }
-            .buttons3 {
-                width: 20rem;
-                height: 7rem;
-                button {
-                    height: 2.5rem;
-                    width: 19rem;
-                    margin: 0.3rem;
-                    padding: 0.1rem;
-                    border: solid 0.1rem #ffffff;
-                    background-color: transparent;
-                    color: #ffffff;
-                    font-size: 1.1rem;
-                }
-            }
-        }
-        .card4 {
-            grid-area: card4;
-            margin: 0 2rem;
             .image4 {
                 margin-top: 3rem;
                 height: 26rem;
                 width: 20rem;
             }
-            .buttons4 {
+            .buttons {
                 width: 20rem;
                 height: 7rem;
                 button {
@@ -326,7 +145,7 @@
                     border: solid 0.1rem #ffffff;
                     background-color: transparent;
                     color: #ffffff;
-                    font-size: 1.1rem;
+                    font-size: 1rem;
                 }
             }
         }
@@ -335,89 +154,34 @@
 @media (min-width: 1025px) and (max-width: 1440px) {
     #cards {
         display: grid;
-        grid-template-areas: "card1 card2" "card3 card4";
-        .card1 {
-            grid-area: card1;
-            margin: 0 4rem;
+        grid-template-columns: 1fr 1fr;
+        .card {
+            margin: 0 2rem;
             .image1 {
                 margin: 0;
                 height: 26rem;
                 width: 20rem;
             }
-            .buttons1 {
-                width: 20rem;
-                height: 6rem;
-                button {
-                    height: 2rem;
-                    width: 19rem;
-                    margin: 0.3rem;
-                    padding: 0.1rem;
-                    border: solid 0.1rem #ffffff;
-                    background-color: transparent;
-                    color: #ffffff;
-                    font-size: 1rem;
-                }
-            }
-        }
-        .card2 {
-            grid-area: card2;
-            margin: 0 4rem;
             .image2 {
                 margin: 0;
                 height: 26rem;
                 width: 20rem;
             }
-            .buttons2 {
-                width: 20rem;
-                height: 6rem;
-                button {
-                    height: 2rem;
-                    width: 19rem;
-                    margin: 0.3rem;
-                    padding: 0.1rem;
-                    border: solid 0.1rem #ffffff;
-                    background-color: transparent;
-                    color: #ffffff;
-                    font-size: 1rem;
-                }
-            }
-        }
-        .card3 {
-            grid-area: card3;
-            margin: 0 4rem;
             .image3 {
                 margin-top: 3rem;
                 height: 26rem;
                 width: 20rem;
             }
-            .buttons3 {
-                width: 20rem;
-                height: 6rem;
-                button {
-                    height: 2rem;
-                    width: 19rem;
-                    margin: 0.3rem;
-                    padding: 0.1rem;
-                    border: solid 0.1rem #ffffff;
-                    background-color: transparent;
-                    color: #ffffff;
-                    font-size: 1rem;
-                }
-            }
-        }
-        .card4 {
-            grid-area: card4;
-            margin: 0 4rem;
             .image4 {
                 margin-top: 3rem;
                 height: 26rem;
                 width: 20rem;
             }
-            .buttons4 {
+            .buttons {
                 width: 20rem;
-                height: 6rem;
+                height: 7rem;
                 button {
-                    height: 2rem;
+                    height: 2.5rem;
                     width: 19rem;
                     margin: 0.3rem;
                     padding: 0.1rem;
@@ -433,96 +197,41 @@
 @media (min-width: 1441px) {
     #cards {
         display: grid;
-        grid-template-areas: "card1 card2" "card3 card4";
-        .card1 {
-            grid-area: card1;
-            margin: 5rem;
+        grid-template-columns: 1fr 1fr;
+        .card {
+            margin: 2rem 5rem;
             .image1 {
                 margin: 0;
-                height: 35rem;
-                width: 26rem;
+                height: 42rem;
+                width: 30rem;
             }
-            .buttons1 {
-                width: 26rem;
-                height: 10rem;
-                button {
-                    height: 3.5rem;
-                    width: 25rem;
-                    margin: 0.3rem;
-                    padding: 0.1rem;
-                    border: solid 0.1rem #ffffff;
-                    background-color: transparent;
-                    color: #ffffff;
-                    font-size: 1.5rem;
-                }
-            }
-        }
-        .card2 {
-            grid-area: card2;
-            margin: 5rem;
             .image2 {
                 margin: 0;
-                height: 35rem;
-                width: 26rem;
+                height: 42rem;
+                width: 30rem;
             }
-            .buttons2 {
-                width: 26rem;
-                height: 10rem;
-                button {
-                    height: 3.5rem;
-                    width: 25rem;
-                    margin: 0.3rem;
-                    padding: 0.1rem;
-                    border: solid 0.1rem #ffffff;
-                    background-color: transparent;
-                    color: #ffffff;
-                    font-size: 1.5rem;
-                }
-            }
-        }
-        .card3 {
-            grid-area: card3;
-            margin: 5rem;
             .image3 {
-                margin: 0;
-                height: 35rem;
-                width: 26rem;
+                margin-top: 3rem;
+                height: 42rem;
+                width: 30rem;
             }
-            .buttons3 {
-                width: 26rem;
-                height: 10rem;
-                button {
-                    height: 3.5rem;
-                    width: 25rem;
-                    margin: 0.3rem;
-                    padding: 0.1rem;
-                    border: solid 0.1rem #ffffff;
-                    background-color: transparent;
-                    color: #ffffff;
-                    font-size: 1.5rem;
-                }
-            }
-        }
-        .card4 {
-            grid-area: card4;
-            margin: 5rem;
             .image4 {
-                margin: 0;
-                height: 35rem;
-                width: 26rem;
+                margin-top: 3rem;
+                height: 42rem;
+                width: 30rem;
             }
-            .buttons4 {
-                width: 26rem;
-                height: 10rem;
+            .buttons {
+                width: 30rem;
+                height: 12rem;
                 button {
-                    height: 3.5rem;
-                    width: 25rem;
-                    margin: 0.3rem;
+                    height: 4rem;
+                    width: 26rem;
+                    margin: 0.6rem;
                     padding: 0.1rem;
                     border: solid 0.1rem #ffffff;
                     background-color: transparent;
                     color: #ffffff;
-                    font-size: 1.5rem;
+                    font-size: 1.777rem;
                 }
             }
         }
