--- a/src/style/localization/localization.scss
+++ b/src/style/localization/localization.scss
@@ -6,7 +6,7 @@
     height: 800px;
     h3 {
         color: #000000;
-        font-size: 1.5rem;
+        font-size: 1.777rem;
         font-weight: 300;
         margin-top: 8rem;
     }
@@ -38,7 +38,7 @@
             margin: 0 0 2rem 0;
             p {
                 margin: 1.5rem 1rem 0 1rem;
-                font-size: 0.9rem;
+                font-size: 1rem;
                 font-weight: 300;
                 max-width: 272px;
             }
@@ -51,10 +51,10 @@
         flex-direction: column;
         align-items: center;
         background-image: url('../../assets/backgrounds/Backg1.png');
-        height: 1000px;
+        height: 1100px;
         h3 {
             color: #000000;
-            font-size: 3rem;
+            font-size: 2.369rem;
             font-weight: 300;
             margin-top: 14rem;
         }
@@ -63,7 +63,7 @@
             flex-direction: column;
             align-items: center;
             .iframe-container {
-                width: 400px;
+                width: 378px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -71,7 +71,7 @@
                 margin-bottom: 2rem;
                 .iframe {
                     height: 300px;
-                    width: 400px;
+                    width: 378px;
                     border: none;
                     z-index: 0;
                     border-radius: 20px;
@@ -86,9 +86,9 @@
                 margin: 0 0 2rem 0;
                 p {
                     margin: 1.5rem 1rem 0 1rem;
-                    font-size: 1.2rem;
+                    font-size: 1.333rem;
                     font-weight: 300;
-                    max-width: 400px;
+                    max-width: 378px;
                 }
             }
         }
@@ -100,19 +100,19 @@
         flex-direction: column;
         align-items: center;
         background-image: url('../../assets/backgrounds/Backg1.png');
-        height: 1150px;
+        height: 1350px;
         h3 {
             color: #000000;
-            font-size: 2.8rem;
+            font-size: 2.369rem;
             font-weight: 300;
-            margin-top: 10rem;
+            margin: 12rem 0 6rem 0;
         }
         .localization-iframe {
             display: flex;
             flex-direction: column;
             align-items: center;
             .iframe-container {
-                width: 600px;
+                width: 512px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -120,7 +120,7 @@
                 margin-bottom: 3rem;
                 .iframe {
                     height: 350px;
-                    width: 600px;
+                    width: 512px;
                     border: none;
                     z-index: 0;
                     border-radius: 25px;
@@ -134,9 +134,9 @@
                 text-align: center;
                 p {
                     margin: 2rem 1rem 0rem 1rem;
-                    font-size: 1.6rem;
+                    font-size: 1.777rem;
                     font-weight: 300;
-                    max-width: 600px;
+                    max-width: 500px;
                 }
             }
         }
@@ -148,27 +148,26 @@
         flex-direction: column;
         align-items: center;
         background-image: url('../../assets/backgrounds/Backg1.png');
-        height: 1150px;
+        height: 1250px;
         h3 {
             color: #000000;
-            font-size: 2.8rem;
+            font-size: 2.369rem;
             font-weight: 300;
-            margin-top: 10rem;
+            margin: 12rem 0 6rem 0;
         }
         .localization-iframe {
             display: flex;
             flex-direction: column;
             align-items: center;
             .iframe-container {
-                width: 600px;
+                width: 512px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                margin-top: 5rem;
-                margin-bottom: 3rem;
+                margin: 0 0 3rem 0;
                 .iframe {
                     height: 350px;
-                    width: 600px;
+                    width: 512px;
                     border: none;
                     z-index: 0;
                     border-radius: 25px;
@@ -182,9 +181,9 @@
                 text-align: center;
                 p {
                     margin: 2rem 1rem 0rem 1rem;
-                    font-size: 1.6rem;
+                    font-size: 1.777rem;
                     font-weight: 300;
-                    max-width: 600px;
+                    max-width: 500px;
                 }
             }
         }
@@ -199,24 +198,23 @@
         height: 1500px;
         h3 {
             color: #000000;
-            font-size: 2.8rem;
+            font-size: 3.157rem;
             font-weight: 300;
-            margin-top: 15rem;
+            margin: 12rem 0 6rem 0;
         }
         .localization-iframe {
             display: flex;
             flex-direction: column;
             align-items: center;
             .iframe-container {
-                width: 700px;
+                width: 800px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                margin-top: 10rem;
-                margin-bottom: 3rem;
+                margin: 0 0 3rem 0;
                 .iframe {
-                    height: 400px;
-                    width: 700px;
+                    height: 500px;
+                    width: 800px;
                     border: none;
                     z-index: 0;
                     border-radius: 25px;
@@ -229,10 +227,10 @@
                 align-items: center;
                 text-align: center;
                 p {
-                    margin: 2rem 1rem 0rem 1rem;
-                    font-size: 2.2rem;
+                    margin: 3rem 0 0rem 0;
+                    font-size: 2.369rem;
                     font-weight: 300;
-                    max-width: 640px;
+                    max-width: 654px;
                 }
             }
         }
