--- a/src/style/carousel/carousel.scss
+++ b/src/style/carousel/carousel.scss
@@ -1,6 +1,6 @@
 #carousel {
     background-image: url('../../assets/backgrounds/Backg1.png');
-    height: 750px;
+    height: 800px;
     .carousel-title {
         display: flex;
         justify-content: center;
@@ -8,7 +8,7 @@
         h3 {
             color: #000000;
             text-shadow: 1px 1px 1px #cacaca;
-            font-size: 1.5rem;
+            font-size: 1.777rem;
             font-weight: 300;
             margin-top: 8rem;
             margin-bottom: 1rem;
@@ -44,7 +44,7 @@
             text-decoration: none;
             h4 {
                 color: #1f1f1f;
-                font-size: 0.9rem;
+                font-size: 1rem;
                 font-weight: 300;
                 text-align: center;
                 max-width: 16rem;
@@ -59,7 +59,7 @@
             }
             .icon {
                 color: #1f1f1f;
-                font-size: 0.6rem;
+                font-size: 0.8rem;
                 margin: 0rem;
             }
         }
@@ -69,7 +69,7 @@
     #carousel {
         height: 1250px;
         .carousel-title h3 {
-            font-size: 3rem;
+            font-size: 2.369rem;
             margin-top: 14rem;
             margin-bottom: 5rem;
         }
@@ -79,17 +79,17 @@
         }
         .instagram a {
             h4 {
-                font-size: 1.5rem;
+                font-size: 1.333rem;
                 max-width: 24rem;
                 margin-top: 2rem;
             }
             p {
-                font-size: 1.2rem;
+                font-size: 1.222rem;
                 margin: 1rem;
             }
             .icon {
                 color: #1f1f1f;
-                font-size: 1.2rem;
+                font-size: 1.222rem;
                 margin: 0rem;
             }
         }
@@ -99,9 +99,8 @@
     #carousel {
         height: 1200px;
         .carousel-title h3 {
-            font-size: 2.8rem;
-            margin-top: 10rem;
-            margin-bottom: 5rem;
+            font-size: 2.369rem;
+            margin: 12rem 0 6rem 0;
         }
         .carousel-container .inner-carousel .carousel-item {
             min-height: 24rem;
@@ -109,17 +108,17 @@
         }
         .instagram a {
             h4 {
-                font-size: 1.8rem;
-                max-width: 30rem;
-                margin-top: 1rem;
+                font-size: 1.333rem;
+                max-width: 25rem;
+                margin-top: 2rem;
             }
             p {
-                font-size: 1.4rem;
+                font-size: 1rem;
                 margin: 1rem;
             }
             .icon {
                 color: #1f1f1f;
-                font-size: 1.2rem;
+                font-size: 1rem;
                 margin: 0rem;
             }
         }
@@ -129,27 +128,29 @@
     #carousel {
         height: 1200px;
         .carousel-title h3 {
-            font-size: 2.8rem;
-            margin-top: 10rem;
-            margin-bottom: 5rem;
+            font-size: 2.369rem;
+            margin: 12rem 0 6rem 0;
         }
-        .carousel-container .inner-carousel .carousel-item {
-            min-height: 24rem;
-            min-width: 24rem;
+        .carousel-container {
+            margin: 0;
+            .inner-carousel .carousel-item {
+                min-height: 24rem;
+                min-width: 24rem;
+            }
         }
         .instagram a {
             h4 {
-                font-size: 1.8rem;
-                max-width: 30rem;
-                margin-top: 1rem;
+                font-size: 1.333rem;
+                max-width: 25rem;
+                margin-top: 2rem;
             }
             p {
-                font-size: 1.4rem;
+                font-size: 1rem;
                 margin: 1rem;
             }
             .icon {
                 color: #1f1f1f;
-                font-size: 1.2rem;
+                font-size: 1rem;
                 margin: 0rem;
             }
         }
@@ -159,27 +160,29 @@
     #carousel {
         height: 1400px;
         .carousel-title h3 {
-            font-size: 2.8rem;
-            margin-top: 15rem;
-            margin-bottom: 5rem;
+            font-size: 3.157rem;
+            margin: 12rem 0 6rem 0;
         }
-        .carousel-container .inner-carousel .carousel-item {
-            min-height: 30rem;
-            min-width: 30rem;
+        .carousel-container {
+            margin: 0;
+            .inner-carousel .carousel-item {
+                min-height: 30rem;
+                min-width: 30rem;
+            }
         }
         .instagram a {
             h4 {
-                font-size: 1.8rem;
-                max-width: 30rem;
-                margin-top: 1rem;
+                font-size: 1.777rem;
+                max-width: 29rem;
+                margin-top: 2rem;
             }
             p {
-                font-size: 1.4rem;
+                font-size: 1.333rem;
                 margin: 1rem;
             }
             .icon {
                 color: #1f1f1f;
-                font-size: 1.2rem;
+                font-size: 1.5rem;
                 margin: 0rem;
             }
         }
