--- a/src/style/home/home.scss
+++ b/src/style/home/home.scss
@@ -21,26 +21,27 @@
             background-color: #ffffff;
             border-radius: 0 0 20px 20px;
             width: 272px;
-            padding: 1rem 0.5rem 1rem 1rem;
+            padding: 1rem;
             z-index: 1;
             h2 {
                 color: #000000;
-                font-size: 0.9rem;
+                font-size: 1rem;
                 font-weight: 300;
                 max-width: 270px;
                 margin: 0;
                 span {
-                    font-size: 1.8rem;
+                    font-size: 1.777rem;
                     font-weight: 300;
                 }
             }
             .home-image-text-scheduling {
                 display: flex;
                 align-items: center;
+                margin-top: 0.2rem;
                 p {
                     color: #000000;
                     margin: 0;
-                    font-size: 0.8rem;
+                    font-size: 0.75rem;
                     font-weight: 300;
                 }
                 .home-image-text-scheduling-button {
@@ -48,13 +49,11 @@
                     width: 5rem;
                     height: 1.5rem;
                     background-image: url('../../assets/backgrounds/Beckg2.png');
-                    border-radius: 20px;
+                    border-radius: 5px;
                     border: none;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
                     a {
-                        font-size: 0.6rem;
+                        font-size: 0.7rem;
+                        font-weight: 300;
                         color: #ffffff;
                         text-decoration: none;
                     }
@@ -69,15 +68,15 @@
         .home-image {
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            justify-content: flex-end;
             width: 100%;
+            height: 710px;
             margin-top: 7rem;
             background-image: url('../../assets/backgrounds/Backg1.png');
             .home-image-photo{
-                margin-top: 2rem;
+                margin-top: 3rem;
                 border-radius: 20px 20px 0 0;
-                width: 400px;
+                width: 378px;
                 z-index: 0;
             }
             .home-image-text {
@@ -86,17 +85,18 @@
                 justify-content: center;
                 background-color: #ffffff;
                 border-radius: 0 0 20px 20px;
-                width: 400px;
-                padding: 1rem 0.5rem 1rem 1rem;
+                width: 378px;
+                height: 150px;
+                padding: 1rem 0.5rem 1rem 2rem;
                 z-index: 1;
                 h2 {
                     color: #000000;
-                    font-size: 1.3rem;
+                    font-size: 1.333rem;
                     font-weight: 300;
-                    max-width: 400px;
+                    max-width: 315px;
                     margin: 1rem 0 0 0;
                     span {
-                        font-size: 2.7rem;
+                        font-size: 2.369rem;
                         font-weight: 300;
                     }
                 }
@@ -104,6 +104,7 @@
                     display: flex;
                     align-items: center;
                     margin: 0.5rem 0;
+                    width: 315px;
                     p {
                         color: #000000;
                         margin: 0;
@@ -111,17 +112,14 @@
                         font-weight: 300;
                     }
                     .home-image-text-scheduling-button {
-                        margin-left: 0.5rem;
-                        width: 6rem;
-                        height: 1.8rem;
+                        margin-left: 1rem;
+                        width: 110px;
+                        height: 2rem;
                         background-image: url('../../assets/backgrounds/Beckg2.png');
-                        border-radius: 20px;
+                        border-radius: 10px;
                         border: none;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
                         a {
-                            font-size: 0.9rem;
+                            font-size: 0.95rem;
                             font-weight: 300;
                             color: #ffffff;
                             text-decoration: none;
@@ -138,27 +136,28 @@
         .home-image {
             background-image: url("../../assets/backgrounds/Backg1.png");
             display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
+            flex-direction: column;
+            justify-content: flex-end;
             width: 100%;
-            margin-top: 3.75rem;
+            margin-top: 5rem;
             .home-image-text {
-                position: initial;
-                border-radius: 30px;
-                background-color: transparent;
-                width: 450px;
-                height: 200px;
-                padding: 1rem 0.5rem 1rem 1rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                border-radius: 0 0 30px 30px;
+                background-color: #ffffff;
+                padding-left: 3rem;
+                width: 512px;
+                height: 220px;
                 z-index: 1;
                 h2 {
-                    font-size: 1.2rem;
+                    font-size: 1.666rem;
                     color: #000000;
-                    max-width: 340px;
+                    max-width: 451px;
                     text-shadow: none;
                     span {
                         color: #000000;
-                        font-size: 2.5rem;
+                        font-size: 3.157rem;
                     }
                 }
                 .home-image-text-scheduling {
@@ -166,22 +165,22 @@
                     align-items: center;
                     p {
                         color: #000000;
-                        font-size: 1rem;
+                        font-size: 1.333rem;
                         font-weight: 300;
                         text-shadow: none;
                     }
                     .home-image-text-scheduling-button {
-                        margin-left: 0.5rem;
-                        width: 6rem;
-                        height: 2rem;
+                        margin-left: 1rem;
+                        width: 8rem;
+                        height: 2.5rem;
                         background-image: url('../../assets/backgrounds/navbar/BackNavbar.png');
-                        border-radius: 30px;
+                        border-radius: 10px;
                         border: none;
                         display: flex;
                         align-items: center;
                         justify-content: center;
                         a {
-                            font-size: 0.8rem;
+                            font-size: 1rem;
                             padding: 0.6rem 0.8rem;
                             font-weight: 300;
                             color: #ffffff;
@@ -192,9 +191,9 @@
             }
             .home-image-photo{
                 position: initial;
-                border-radius: 30px;
-                margin: 2rem;
-                width: 400px;
+                border-radius: 30px 30px 0 0;
+                margin: 2rem 0 0 0;
+                width: 512px;
                 z-index: 0;
             }
         }
@@ -204,7 +203,7 @@
     #home .home-image {
         background-image: url("../../assets/backgrounds/Backg1.png");
         display: flex;
-        flex-direction: row;
+        flex-direction: row-reverse;
         align-items: center;
         justify-content: center;
         width: 100%;
@@ -213,18 +212,18 @@
             position: initial;
             border-radius: 30px;
             background-color: transparent;
-            width: 550px;
+            width: 480px;
             height: 200px;
-            padding: 1rem 0.5rem 1rem 1rem;
+            padding: 1rem 0.5rem 1rem 2rem;
             z-index: 1;
             h2 {
-                font-size: 1.8rem;
+                font-size: 1.666rem;
                 color: #000000;
-                max-width: 500px;
+                max-width: 480px;
                 text-shadow: none;
                 span {
                     color: #000000;
-                    font-size: 3.5rem;
+                    font-size: 3.157rem;
                 }
             }
             .home-image-text-scheduling {
@@ -233,16 +232,16 @@
                 padding: 0.5rem 0;
                 p {
                     color: #000000;
-                    font-size: 1.4rem;
+                    font-size: 1.333rem;
                     font-weight: 300;
                     text-shadow: none;
                 }
                 .home-image-text-scheduling-button {
-                    margin-left: 0.5rem;
+                    margin-left: 1rem;
                     width: 8rem;
                     height: 2.5rem;
-                    background-image: url('../../assets/backgrounds/navbar/BackNavbar.png');
-                    border-radius: 30px;
+                    background-image: url('../../assets/backgrounds/Beckg2.png');
+                    border-radius: 10px;
                     a {
                         padding: 0.8rem 1.4rem;
                         font-size: 1rem;
@@ -265,27 +264,27 @@
     #home .home-image {
         background-image: url("../../assets/backgrounds/Backg1.png");
         display: flex;
-        flex-direction: row;
+        flex-direction: row-reverse;
         align-items: center;
         justify-content: center;
         width: 100%;
-        margin-top: 7rem;
+        margin-top: 6rem;
         .home-image-text {
             position: initial;
             border-radius: 30px;
             background-color: transparent;
-            width: 700px;
+            width: 620px;
             height: 200px;
-            padding: 1rem 0.5rem 1rem 1rem;
+            padding: 1rem 0.5rem 1rem 2rem;
             z-index: 1;
             h2 {
-                font-size: 2.2rem;
+                font-size: 2rem;
                 color: #000000;
-                max-width: 700px;
+                max-width: 560px;
                 text-shadow: none;
                 span {
                     color: #000000;
-                    font-size: 4.8rem;
+                    font-size: 4.209rem;
                 }
             }
             .home-image-text-scheduling {
@@ -294,19 +293,19 @@
                 padding: 0.5rem 0;
                 p {
                     color: #000000;
-                    font-size: 2rem;
+                    font-size: 1.777rem;
                     font-weight: 300;
                     text-shadow: none;
                 }
                 .home-image-text-scheduling-button {
-                    margin-left: 0.5rem;
-                    width: 11rem;
-                    height: 3.4rem;
-                    background-image: url('../../assets/backgrounds/navbar/BackNavbar.png');
-                    border-radius: 30px;
+                    margin-left: 1.5rem;
+                    width: 10rem;
+                    height: 3rem;
+                    background-image: url('../../assets/backgrounds/Beckg2.png');
+                    border-radius: 10px;
                     a {
                         padding: 0.8rem 1.4rem;
-                        font-size: 1.5rem;
+                        font-size: 1.333rem;
                         color: #ffffff;
                         font-weight: 300;
                     }
@@ -316,8 +315,8 @@
         .home-image-photo{
             position: initial;
             border-radius: 30px;
-            margin: 6rem 3rem 0 0;
-            width: 700px;
+            margin: 3rem;
+            width: 500px;
             z-index: 0;
         }
     }
