--- a/src/style/navbar/navbar.scss
+++ b/src/style/navbar/navbar.scss
@@ -55,7 +55,6 @@
                 height: 100vh;
                 width: 260px;
                 background-image: url("../../assets/backgrounds/Backg1.png");
-                border-radius: 0 0 20px 0;
                 overflow-y: auto;
                 .menu-header {
                     display: flex;
@@ -159,11 +158,9 @@
             .navbar-mobile-menu {
                 height: 100vh;
                 width: 100vw;
-                border-radius: 0 0 20px 0;
                 .menu-close-button .menu-button-icon {  
                     font-size: 4rem;
                     margin: 1.5rem 2rem 0 0;
-
                 }
                 .menu-session {
                     width: 355px;
@@ -201,7 +198,7 @@
                         }
                     }
                     .buttons {
-                        margin: 5rem 2rem rem 0;
+                        margin: 5rem 2rem 4rem 0;
                         display: flex;
                         flex-direction: column;
                         .login {
